[tool.poetry]
name = "home_indications"
version = "0.1.0"
description = "Recognition numders of counter, such as water, electricity and ect."
authors = ["Vlad <vlad_ss1994@mail.ru>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.78.0"
pytesseract = "^0.3.9"
numpy = "^1.22.4"
opencv-python = "^4.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
